Created Content component using styled-components

--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,10 @@ body {
   font-family: sans-serif;
 }
 
-.section {
+/* .section {
   background-color: #f0d1aa;
   display: flex;
   justify-content: center;
   color: #f0aeaa;
   border-radius: 15px;
-}
+} */
