Started work on Progress Tracker

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,15 @@
-body {
+/* body {
   background-color: #aaf0d1;
   display: flex;
   justify-content: center;
   color: #d1aaf0;
+  font-family: sans-serif;
+} */
+body {
+  background-color: #ccddee;
+  display: flex;
+  justify-content: center;
+  text-align: center;
   font-family: sans-serif;
 }
 
